# ray-marcher

./: Cargo.toml  Trunk.toml  index.html  readme.md  style.css
.cargo/: config
src/: angle.rs  app.rs  camera.rs  combine.rs  dimensions.rs  entity.rs  frame_timer.rs  gpu_render.rs  input.rs  input_handler.rs  lib.rs  light.rs  light_buffers.rs  main.rs  material.rs  primitives.rs  quaternion.rs  ray.rs  render.rs  scene.rs  scene_buffer.rs  scene_descriptor.rs  scene_entity.rs  signed_distance_field.rs  stats.rs  transform.rs  vector3.rs  wgpu_context copy.rs  wgpu_context.rs
src/gpu/: instance.rs  mod.rs  resource.rs
src/input/: input_tracker.rs  keyboard.rs  keyboard_provider.rs  keyboard_state.rs  mouse.rs
src/material/: pbr.rs
src/primitives/: plane.rs  sphere.rs
src/scene_descriptor/: objects.rs
src/shaders/: compute.wgsl  depth.wgsl  draw_texture.wgsl  frag.wgsl  test.wgsl  vert.wgsl
src/signed_distance_field/: combine.rs  plane.rs  primitive.rs  repeat.rs  rouding.rs  scale.rs  sphere.rs  torus.rs  transform.rs
src/util/: interpolation.rs  mod.rs  set_img.rs
src/wgpu_context/: buffers.rs
