[package]
name = "ray-marcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.61", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement',
] }

bytemuck = { version = "1.13.1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.10.0"
image = "0.24.5"
rayon = "1.7.0"
wasm-bindgen-futures = "0.4.34"

# TODO: Update to 0.15 once panic on wasm has been fixed
wgpu = { version = "0.15.1", features = ["webgl"] }

log = "0.4.17"
base64 = "0.21.0"
wasm-bindgen = "0.2.83"
gloo = "0.8.0"
lazy_static = "1.4.0"


[profile.release]
debug = true


[build]
target = "wasm32-unknown-unknown"
