[package]
name = "ray-marcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.11.5"
image = "0.25.4"
rayon = "1.7.0"
wgpu = "22.1.0"
log = "0.4.17"
base64 = "0.22.1"
lazy_static = "1.4.0"
winit = "0.30.5"
pollster = "0.3.0"
glam = { version = "0.29.0", features = ["bytemuck"] }
